--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
-.App {
-  text-align: center;
+
+.navBar {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    background-color: orange;
+    padding: 20px;
+    margin: 10px;
+}
+.styles {
+    margin: 1em;
+    color: white;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.button{
+    background-color: #FAFBFC;
+    color: #24292E;
+    padding: 6px 16px;
+}
+.button:hover {
+    background-color: lightgray;
+    transition-duration: 0.1s;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.link-color {
+    color: #e47f03;
+    list-style: none;
+}
+.head-color {
+    color: #e47f03;
+    font-size: large;
+
+}
+.p-color {
+    color: black;
+    font-size: large;
+}
+.page {
+    margin: 50px;
+}
+.blogs-content {
+    border: grey dotted;
+    margin: 50px;
+    padding: 20px;
+}
+.blog-title {
+    font-size: 20px;
+    font-weight: bold;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
+
+
+
+
